assets/css/style.css
.row .text {
  font-size: 1.3em;
  font-stretch: expanded;
}

#banner h1 {
  font-size: 4.2em;
}

#banner .row .text {
  font-size: 1.6em;
}

footer .row .text {
  font-size: 1.25em;
  margin-left: 7px;
}

.material-icons {
  font-size: 35px;
}

nav ul a,
nav .brand-logo {
  color: #444;
  height: 80px;
  padding-top: 5px;
}

p {
  line-height: 2rem;
}

.button-collapse {
  color: #26a69a;
}

.parallax-container {
  min-height: 300px;
  line-height: 0;
  height: auto;
  background-color: rgba(0,0,0,0.7);
  color: rgba(255,255,255,.9);
}

.parallax-container#banner {
  min-height: 580px;
}

.parallax-container .section {
  width: 100%;
}

.icon-block {
  padding: 0 15px;
}
.icon-block .material-icons {
  font-size: inherit;
}

footer.page-footer {
  margin: 0;
}

.cd-timeline-img.cd-registration {
  background: #c03b44;
}

.cd-timeline-img.cd-session {
  background: #75ce66;
}

.cd-timeline-img.cd-lunch {
  background: #f0ca45;
}

.cd-timeline-img.cd-hands-on {
  background: #75ce66;
}

.cd-timeline-img.cd-last-session {
  background: #c03b44;
}

#banner{
  display: flex;
  align-items: center;
}

#banner h1.header{
  font-family: 'Droid Sans', sans-serif;
  margin: 0;
}

#banner .section{
  margin: 0;
  padding: 0;
}

.parallax-container{
  background-color: rgba(0,0,0,0.65);
}

.list-inline {
  padding-left: 0;
  list-style: none;
}

.list-inline > li {
  display: inline-block;
  padding-right: 20px;
  padding-left: 20px;
}

#banner .social {
  padding-top: 50px;
}

#banner .social > li a {
  color: #fff;
}

#banner .social > li a:hover,
#banner .social > li a.active {
  color: #2da9ff;
  text-decoration: none;
}

span.fa {
  display: inline-block;
  font-size: 35px;
}

.evtsiteico,
.evtsiteico:hover {
  display: inline-block;
  width: 32.5px;
  height: 35px;
  background-repeat: no-repeat;
  overflow: hidden;
  background-size: 25px;
  background-position: 0 10px;
}

.evtsiteico.lanyrd {
  background-image: url('../img/misc/lanyrd-white.png');
}

.evtsiteico.lanyrd:hover {
  background-image: url('../img/misc/lanyrd-blue.png');
}

.ebrite {
  margin: 65px 0 0 0;
}

.ebrite .btn-large {
  margin-bottom: 60px;
  display: none;
}

.ebrite .frame {
  border: 0;
  width: 90%;
  height: 300px;
  margin: 0;
}

.fa-download {
  color: rgba(255,255,255,0.9)
}

#halls {
  padding: 0;
}

#halls .hall-wrapper {
  padding: 10px;
}

.hall {
  padding: 10px;
  background: #efefef;
}

.hall.selected,
.hall:hover,
.hall:active {
  -webkit-transition: all 0.3s;
  -moz-transition: all 0.3s;
  transition: all 0.3s;
  color: #ffffff;
  background: rgba(20, 125, 180, 0.8);
}

.hall h4 {
  font-size: 28px;
}

.hall h5 {
  font-size: 18px;
}

.hall h4,
.hall h5 {
  margin-bottom: 10px;
  text-align: center;
  cursor: pointer;
}

#hallSessionLists {
  padding: 0;
}

#hallSessionLists .hallSessionList {
  display: table;
  width: 100%;
  border-spacing: 10px 5px;
  padding: 0;
}

.session {
  display: table-row;
}

.session .symbol {
  width: 16%;
  padding: 15px 0;
  text-align: center;
  display: table-cell;
  vertical-align: middle;
  color: #ffffff;
  background: rgba(20, 125, 180, 0.8)
}

.session .symbol i {
  display: block;
  margin-bottom: 10px;
}

.session .symbol .time {
  font-size: 20px;
  font-weight: 700;
}

.session .description {
  font-family: 'Verdana';
  padding: 15px;
  display: table-cell;
  vertical-align: middle;
  background: #f0eff0;
}

.session .description h3 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 23px;
  font-weight: 500;
  color: #2090d0
}

.session .description h3.language-flag:before {
  content: '';
  display: inline-block;
  width: 30px;
  height: 18px;
  background-size: 30px 18px;
  margin-right: 10px;
}

.session .description h3.language-flag.ita:before {
  background-image: url(/assets/img/misc/flag-ita.png);
}

.session .description h3.language-flag.eng:before {
  background-image: url(/assets/img/misc/flag-eng.png);
}

.session .description .abstract {
  padding: 20px 0;
  font-size: 14px;
}

.session .description ul {
  padding: 0 25px;
  margin: 3px 0 0 5px;
  list-style: initial;
}

.session .description li {
  padding: 0 10px;
  list-style-type: disc;
}

.session .description .speaker-image {
  width: 50px;
  border-radius: 50%;
}

.session .description .speaker-name-surname {
  font-size: 14px;
}

.speakers {
  margin-top: 65px;
}

.speaker {
  position: relative;
}

.speaker .picture {
  position: relative;
  width: 400px;
  height: 400px;
  overflow: hidden;
  display: table;
  margin: auto;
}

.speaker .picture img {
  position: absolute;
  width: 400px;
  height: 400px;
  -webkit-transition: all .5s;
  -moz-transition: all .5s;
  -o-transition: all .5s;
  transition: all .5s;
}

.speaker .picture .details {
  position: absolute;
  width: 400px;
  height: 400px;
  background: rgba(20, 125, 180, 0.8);
  font-size: 16px;
  -webkit-transition: all .5s;
  -moz-transition: all .5s;
  -o-transition: all .5s;
  transition: all .5s;
  opacity: 0;
}

.speaker:hover .picture .details {
  opacity: 1;
}

.speaker .picture .details p {
  color: #fff;
  padding: 20px 40px;
  position: absolute;
  top: -100px;
  -webkit-transition: all .5s;
  -moz-transition: all .5s;
  -o-transition: all .5s;
  transition: all .5s;
}

.speaker:hover .picture .details p {
  transform: translateY(100px);
  -ms-transform: translateY(100px);
  -webkit-transform: translateY(100px);
}

.speaker .picture .details .social {
  position: relative;
  top: 430px;
  left: 0px;
  font-size: 26px;
  padding: 0;
  font-weight: 300;
  -webkit-transition: all .5s;
  -moz-transition: all .5s;
  -o-transition: all .5s;
  transition: all .5s;
}

.speaker:hover .picture .details .social {
  transform: translateY(-100px);
  -ms-transform: translateY(-100px);
  -webkit-transform: translateY(-100px);
}

.speaker .picture .details .social a {
  color: #fff;
}

.speaker .picture .details .social ul {
  display: table;
  margin: auto;
}

.speaker .picture .details .social ul li {
  float: left;
  padding: 0 13px;
}

.speaker .caption {
  margin: 10px 0 40px 12px;
}

.speaker .caption h4 {
  font-size: 25px;
  margin: 10px 0 8px 0;
}

.speaker .caption h5 {
  font-size: 13px;
  margin: 0;
}

.sponsorship-logos li.sponsor {
  width: 30%;
  padding: 2%;
  margin-bottom: 70px;
}
  .sponsorship-logos li.sponsor a {
    display: inline-block;
  }

#info h2 {
  margin-top: 55px;
}

.sponsorship-packages .sponsor {
  position: relative;
  padding: 10px;
  color: black;
}

.sponsorship-logos .sponsor:after,
.sponsorship-packages .sponsor:before {
  position: relative;
  color: white;
  text-align: center;
  padding: 4px 8px;
  font-weight: bold;
  font-size: 0.8em;
  font-family: Verdana;
}

.sponsorship-logos .sponsor:after {
  top: 40px;
}

.sponsorship-packages .sponsor:before {
  position: absolute;
  left: 5px;
  top: 30px;
  border-radius: 3px;
  z-index: 1;
}

.sponsorship-logos .sponsor.taaffeite:after,
.sponsorship-packages .sponsor.taaffeite:before {
  content: "TAAFFEITE SPONSOR";
  background: #995588;
}

.sponsorship-logos .sponsor.diamond:after,
.sponsorship-packages .sponsor.diamond:before {
  content: "DIAMOND SPONSOR";
  background: #0ABAE9;
}

.sponsorship-logos .sponsor.ruby:after,
.sponsorship-packages .sponsor.ruby:before {
  content: "RUBY SPONSOR";
  background: #CC342D;
}

.sponsorship-logos .sponsor.emerald:after,
.sponsorship-packages .sponsor.emerald:before {
  content: "EMERALD SPONSOR";
  background: #5B9C64;
}

.sponsorship-logos .sponsor.sapphire:after,
.sponsorship-packages .sponsor.sapphire:before {
  content: "SAPPHIRE SPONSOR";
  background: #0F52BA;
}

.sponsorship-logos .sponsor.amethyst:after,
.sponsorship-packages .sponsor.amethyst:before {
  content: "AMETHYST SPONSOR";
  background: #9C8AA5;
}

.sponsorship-packages .sponsor .details {
  position: relative;   
  background: #f0eff0;
  border: 1px solid gray;
  border-radius: 3px;
  padding: 15px 30px;
}

.sponsorship-packages .sponsor .details .header {
  position: relative;
  text-align: right;
  right: 5px;
}

.sponsorship-packages .sponsor .details .header .amount {
  font-size: x-large;
}

.sponsorship-packages .sponsor .details .header .vat {
  font-size: large;
}

.sponsorship-packages .sponsor .details .header .slots {
  font-size: initial;
}

.sponsorship-packages .sponsor .details ul li {
  background: url(../img/sponsors/list-bullet.png) no-repeat left;
  padding-left: 50px;
  margin: 5px 0 10px 15px;
}

#map {
  position: relative;
  padding: 50px 0 0 0;
}

#canvas-map {
  position: absolute;
  width: 100%;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1;
}

.location { position: relative; background: #fff; z-index: 1; }
.location h3 { margin-left: 3%; }
.location ul { list-style: none; padding-left: 10px; }
.location li { margin: 25px 0px; font-size: 12pt;}
.location li  i { padding-right: 15px; font-size: 12pt;}

@media only screen and (max-width : 992px) {
  .parallax-container .section {
    position: relative;
    top: inherit;
  }

  #banner .section {
    top: 10%;
  }

  #banner h1.header{
    font-size: 4em;
  }
}

@media only screen and (max-width: 700px) {
  .parallax img {
    max-width: 200%;
  }

  #banner .parallax img {
    max-width: 250%;
  }

  .ebrite .btn-large {
    display: block;
  }

  .ebrite .frame {
    display: none;
  }

  .speaker .picture img {
    position: relative;
  }

  .speaker .picture .details {
    position: relative;
    top: -6px;
    opacity: 1;
  }

  .speaker .picture .details p {
    top: 0;
  }

  .speaker:hover .picture .details p {
    transform: inherit;
    -ms-transform: inherit;
    -webkit-transform: inherit;
  }

  .speaker .picture .details .social {
    top: 330px;
  }

  .speaker:hover .picture .details .social {
    transform: inherit;
    -ms-transform: inherit;
    -webkit-transform: inherit;
  }

  .sponsorship-logos li.sponsor {
    width: 45%;
  }

  #canvas-map {
    display: none;
  }
}

@media only screen and (max-width : 600px) {
  #banner .section {
    top: 0;
  }

  nav a.button-collapse i {
    height: 80px;
    line-height: 80px;
  }
}

